; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/unix/extr_..entropy.c_kbdget.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/unix/extr_..entropy.c_kbdget.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@ISC_R_NOTBLOCKING = common dso_local global i64 0, align 8
@ISC_R_SUCCESS = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"\0D\0A\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c".\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_4__*, i8*, i32)* @kbdget to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @kbdget(%struct.TYPE_4__* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8, align 1
  %11 = alloca i8, align 1
  %12 = alloca i8, align 1
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 @UNUSED(i8* %13)
  %15 = load i32, i32* %7, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %3
  %18 = load i64, i64* @ISC_R_NOTBLOCKING, align 8
  store i64 %18, i64* %4, align 8
  br label %49

19:                                               ; preds = %3
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = call i64 @isc_keyboard_getchar(i32* %21, i8* %12)
  store i64 %22, i64* %8, align 8
  %23 = load i64, i64* %8, align 8
  %24 = load i64, i64* @ISC_R_SUCCESS, align 8
  %25 = icmp ne i64 %23, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %19
  %27 = load i64, i64* %8, align 8
  store i64 %27, i64* %4, align 8
  br label %49

28:                                               ; preds = %19
  %29 = call i32 @TIME_NOW(i32* %9)
  %30 = call zeroext i8 @isc_time_nanoseconds(i32* %9)
  store i8 %30, i8* %10, align 1
  %31 = load i8, i8* %12, align 1
  store i8 %31, i8* %11, align 1
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %33 = load i8, i8* %10, align 1
  %34 = load i8, i8* %11, align 1
  %35 = call i64 @isc_entropy_addcallbacksample(%struct.TYPE_4__* %32, i8 zeroext %33, i8 zeroext %34)
  store i64 %35, i64* %8, align 8
  %36 = load i64, i64* %8, align 8
  %37 = load i64, i64* @ISC_R_SUCCESS, align 8
  %38 = icmp ne i64 %36, %37
  br i1 %38, label %39, label %43

39:                                               ; preds = %28
  %40 = load i32, i32* @stderr, align 4
  %41 = call i32 @fprintf(i32 %40, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %42 = load i64, i64* %8, align 8
  store i64 %42, i64* %4, align 8
  br label %49

43:                                               ; preds = %28
  %44 = load i32, i32* @stderr, align 4
  %45 = call i32 @fprintf(i32 %44, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %46 = load i32, i32* @stderr, align 4
  %47 = call i32 @fflush(i32 %46)
  %48 = load i64, i64* %8, align 8
  store i64 %48, i64* %4, align 8
  br label %49

49:                                               ; preds = %43, %39, %26, %17
  %50 = load i64, i64* %4, align 8
  ret i64 %50
}

declare dso_local i32 @UNUSED(i8*) #1

declare dso_local i64 @isc_keyboard_getchar(i32*, i8*) #1

declare dso_local i32 @TIME_NOW(i32*) #1

declare dso_local zeroext i8 @isc_time_nanoseconds(i32*) #1

declare dso_local i64 @isc_entropy_addcallbacksample(%struct.TYPE_4__*, i8 zeroext, i8 zeroext) #1

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i32 @fflush(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
